[package]
name = "refluxdb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
indexmap = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
sled = "0.34.6"
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
hyper = { version = "0.14.15", features = ["full"] }
pretty_env_logger = "0.4"


